--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 anyhow = "1.0.57"
 lazy_static = "1.4.0"
 retry = "1.3.1"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
 thiserror = "1.0.31"
 
 [dev-dependencies]
