--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ lazy_static = "1.4.0"
 retry = "1.3.1"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
+snafu = "0.7.1"
 thiserror = "1.0.31"
 
 [dev-dependencies]
